# Saxion_Y2Q2_Rendering

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MGE_ClassDiagram.asta  README.md
assets/mge/shaders/: color.fs  color.vs  lit.fs  lit.vs  texture.vs  wobble.fs  wobble.vs
assets/scripts/: AI.lua  arena.lua  basicPlayerAI.lua  camera.lua  config.lua  laser.lua  levelGoal.lua  levelsDefinition.lua  luaScene.lua  mover.lua  object.lua  player.lua  playerA.lua  playerAI_A.lua  playerAI_B.lua  playerB.lua  save.lua  scriptComponent.lua  steering.lua  stressTest.lua  testComponent.lua  vector.lua
assets/scripts/UI/: hudArrows.lua  mainMenu.lua  pauseMenu.lua  redoUndoButtons.lua  resultScreen.lua  tutorialScreen.lua
assets/scripts/Utility/: gameSerializer.lua  uiUtilities.lua
assets/scripts/level/: definition1.lua  level.lua  map.lua
assets/scripts/scenes/: definition1.lua  definition2.lua  level.lua  level1.lua  level10.lua  level11.lua  level12.lua  level13.lua  level14.lua  level2.lua  level3.lua  level4.lua  level5.lua  level6.lua  level7.lua  level8.lua  level9.lua  mainMenu.lua
assets/shaders/: color.fs  color.vs  depth.vs  depthDirectional.vs  depthPositional.fs  depthPositional.gs  depthPositional.vs  lit.fs  lit.vs  pbr.fs  pbr.vs  sprite.fs  sprite.vs  terrain.fs  terrain.vs  text.fs  text.vs  wobble.vs
cmake/: FindFTGL.cmake
src/: Resources.h  main.cpp
src/components/: Asteroid.h  Bullet.h  GameOverScreen.cpp  GameOverScreen.h  ParticleSystem.cpp  ParticleSystem.h  Player.h  WrapAroundScreen.h
src/components/behaviors/: CameraOrbitBehavior.cpp  LightPropertyAnimator.cpp  LightPropertyAnimator.h
src/engine/: Engine.cpp  Engine.h  Rigidbody.cpp  Scheduler.h
src/engine/actor/: Actor.cpp  Actor.h  ActorDecl.h  Behavior.h  BehaviorSystem.h
src/engine/components/: Camera.cpp  Camera.h  Light.cpp  Light.h  LuaBehavior.cpp  LuaBehavior.h  Name.h  RenderInfo.cpp  RenderInfo.h  Rigidbody.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Transform.cpp  Transform.h  Transformable.cpp  Transformable.h  TransformableSFML.cpp  TransformableSFML.h  Tween.cpp  Tween.h  UIRect.cpp  UIRect.h
src/engine/core/: ComponentPool.cpp  ComponentPool.h  ComponentReference.cpp  ComponentReference.h  CompoundSystem.cpp  CompoundSystem.h  Entities.cpp  Entities.h  EntitiesView.h  Entity.h  EntityRegistry.cpp  EntityRegistry.h  Font.cpp  Font.h  GLSetUniform.h  Material.cpp  Material.h  Mesh.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scheduler.h  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp
src/engine/events/: Collision.h  UIEvents.h
src/engine/lua/: LuaScene.cpp  LuaScene.h
src/engine/materials/: AbstractMaterial.hpp  ColorMaterial.cpp  ColorMaterial.hpp  Material.cpp  Material.h  TextureMaterial.cpp  TextureMaterial.hpp  WobblingMaterial.cpp  WobblingMaterial.h
src/engine/resources/: Resource.cpp  Resource.h  ResourceLoader.h  Resources.h  StaticResource.h  StaticResources.h
src/engine/systems/: DestroySystem.cpp  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  TransformHierarchySystem.cpp  TransformableHierarchySystem.cpp  TransformableHierarchySystem.h  TweenSystem.cpp  UIEventSystem.cpp  UIEventSystem.h
src/engine/utils/: CallableTraits.h  CustomTypeIndex.h  Demangle.h  Ease.cpp  (+8 more)
src/events/: Restart.h
src/factory/: AsteroidFactory.cpp  BulletFactory.cpp  Factory.h  MainLevelFactory.cpp  PlayerFactory.cpp
src/mge/: MGEDemo.cpp  MGETestScene.cpp  MGETestScene.h  config.hpp
src/misc/: Flicker.h  FlickerSystem.h
src/scenes/: LightingScene.cpp  LightingScene.h  TerrainScene.cpp  TerrainScene.h  TestScene.cpp  TestScene.h
src/systems/: BreakAsteroidSystem.cpp  BreakAsteroidSystem.h  DiagnosticsSystem.cpp  DiagnosticsSystem.h  GenerateAsteroidsSystem.cpp  GenerateAsteroidsSystem.h  PlayerControlsSystem.cpp  PlayerControlsSystem.h  PlayerDeathSystem.cpp  PlayerDeathSystem.h  ScoreSystem.cpp  ScoreSystem.h  ShootSystem.cpp  ShootSystem.h  WrapAroundScreenSystem.cpp  WrapAroundScreenSystem.h
src/utils/: GLHelpers.h
(+81 files in other folders)
